curio-q/kubernetes/auth-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: auth-service-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: auth-service
    template:
        metadata:
            labels:
                app: auth-service
        spec:
            containers:
                - name: auth-service
                  image: pulin412/auth-service-image:latest
                  ports:
                      - containerPort: 8080
