curio-q/kubernetes/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: postgres:latest
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: "50Mi"   # Minimum memory required
              cpu: "10m"       # Minimum CPU required
            limits:
              memory: "100Mi"   # Maximum memory allowed
              cpu: "15m"       # Maximum CPU allowed
#          volumeMounts:
#            - name: database-data
#              mountPath: /var/lib/postgresql/data
#      volumes:
#        - name: db-data
#          persistentVolumeClaim:
#            claimName: db-data-pvc
