curio-q/kubernetes/qa-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qa-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qa-service
  template:
    metadata:
      labels:
        app: qa-service
    spec:
      containers:
        - name: qa-service
          image: pulin412/qa-service-image:latest
          ports:
            - containerPort: 8082
