curio-q/kubernetes/user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: user-service-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: user-service
    template:
        metadata:
            labels:
                app: user-service
        spec:
            containers:
                - name: user-service
                  image: pulin412/user-service-image:latest
                  ports:
                      - containerPort: 8081
