curio-q/kubernetes/zookeeper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:6.2.1  # Use the Zookeeper image
          ports:
            - containerPort: 2181
            - containerPort: 2888
            - containerPort: 3888
