curio-q/kubernetes/auth-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service-service
spec:
  selector:
    app: auth-service
#  type: NodePort   # removed so that access is limited via ingress only
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
