curio-q/kubernetes/user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service-service
spec:
  selector:
    app: user-service
#  type: NodePort   # removed so that access is limited via ingress only
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
