curio-q/kubernetes/zookeeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-service
spec:
  selector:
    app: zookeeper
  ports:
    - name: client
      protocol: TCP
      port: 2181
      targetPort: 2181
    - name: follower
      protocol: TCP
      port: 2888
      targetPort: 2888
    - name: leader
      protocol: TCP
      port: 3888
      targetPort: 3888
