curio-q/kubernetes/curioq-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: curioq-api-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: curioq.com
      http:
        paths:
          - path: /auth-service(/|$)(.*)    # rewriting /auth-service/.. to /...
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service-service
                port:
                  number: 8080
          - path: /user-service(/|$)(.*)    # rewriting /user-service/.. to /...
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-service-service
                port:
                  number: 8081
          - path: /qa-service(/|$)(.*)      # rewriting /qa-service/.. to /...
            pathType: ImplementationSpecific
            backend:
              service:
                name: qa-service-service
                port:
                  number: 8082
